pre-finalização do projeto

--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -11,6 +11,7 @@ div#comments {
     max-height: 500px;
     overflow: auto;
     min-height: 0;
+    scroll-behavior: smooth;
 }
 
 div#card-videos {
